fix compiler/intrinsics/sha/cli/TestUseSHAOptionOnSupportedCPU.java jtreg test on linux s390x

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • None
    • b22
    • s390x
    • linux

        Currently the TestUseSHAOptionOnSupportedCPU.java test fails on linux s390x.
        Failure is:

        java.lang.AssertionError: Option 'UseSHA' is expected to have 'false' value
        'UseSHA' option should be disabled when all UseSHA*Intrinsics are disabled
        at jdk.test.lib.cli.CommandLineOptionTest.verifyOptionValue(CommandLineOptionTest.java:307)
        at jdk.test.lib.cli.CommandLineOptionTest.verifyOptionValue(CommandLineOptionTest.java:280)
        at jdk.test.lib.cli.CommandLineOptionTest.verifyOptionValueForSameVM(CommandLineOptionTest.java:404)
        at compiler.intrinsics.sha.cli.testcases.UseSHASpecificTestCaseForSupportedCPU.verifyOptionValues(UseSHASpecificTestCaseForSupportedCPU.java:76)
        at compiler.intrinsics.sha.cli.SHAOptionsBase$TestCase.test(SHAOptionsBase.java:153)
        at compiler.intrinsics.sha.cli.SHAOptionsBase.runTestCases(SHAOptionsBase.java:129)
        at jdk.test.lib.cli.CommandLineOptionTest.test(CommandLineOptionTest.java:537)
        at compiler.intrinsics.sha.cli.TestUseSHAOptionOnSupportedCPU.main(TestUseSHAOptionOnSupportedCPU.java:51)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
        at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.base/java.lang.reflect.Method.invoke(Method.java:566)
        at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:115)
        at java.base/java.lang.Thread.run(Thread.java:834)

              Assignee:
              Matthias Baesken
              Reporter:
              Matthias Baesken
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: